--- a/package.json
+++ b/package.json
@@ -33,5 +33,15 @@
 			"ts-node/register"
 		],
 		"timeout": "1m"
+	},
+	"devDependencies": {
+		"@dmsi/prettier-config": "^1.3.0",
+		"@types/node": "^14.14.37",
+		"ava": "^3.15.0",
+		"husky": "^6.0.0",
+		"lint-staged": "^10.5.4",
+		"prettier": "^2.2.1",
+		"ts-node": "^9.1.1",
+		"typescript": "^4.2.3"
 	}
 }
